<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient2"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="29dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="153dp"
                android:layout_height="175dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/ade" />

            <LinearLayout
                android:id="@+id/tulisan"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/circle_word"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="10dp">

                <TextView
                    android:id="@+id/namaAde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/nama_ade"
                    android:textColor="#30252C"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nimAde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nim_alya"
                    android:textColor="#30252C"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/emailAde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/alamat_ade"
                    android:textColor="#30252C"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/alamatAde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/email_ade"
                    android:textColor="#30252C"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="29dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="153dp"
                android:layout_height="175dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/alya" />

            <LinearLayout
                android:id="@+id/tulisan2"
                android:layout_width="match_parent"
                android:layout_height="131dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/circle_word"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="10dp">

                <TextView
                    android:id="@+id/namaAlya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/nama_alya"
                    android:textColor="#30252C"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nimAlya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nim_alya"
                    android:textColor="#30252C"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/emailAlya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/alamat_alya"
                    android:textColor="#30252C"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/alamatAlya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/email_alya"
                    android:textColor="#30252C"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>